// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageProposal has the expected html structure if user has signed in 1`] = `
<tm-page-stub
  data-title="Proposal"
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub />
     
    <tool-bar-stub />
  </template>
   
  <div
    class="page-profile__header page-profile__section proposal"
  >
    <div
      class="row"
    >
      <h2
        class="proposal-id"
      >
        
          #2
        
      </h2>
       
      <div
        class="page-profile__header__info"
      >
        <div
          class="page-profile__status-and-title"
        >
          <span
            class="page-profile__status green"
          />
           
          <h2
            class="page-profile__title"
          >
            
              VotingPeriod proposal
            
          </h2>
        </div>
         
        <div
          class="page-profile__header__actions"
        >
          <tm-btn-stub
            color="primary"
            id="vote-btn"
            value="Vote"
          />
           
          <!---->
           
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="row"
    >
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Submitted
        </dt>
         
        <dd>
          a few seconds ago
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Proposal Status
        </dt>
         
        <dd>
          
            Voting started in 2 days.
          
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Deposit Count
        </dt>
         
        <dd>
          
            200 STAKE
          
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Vote Count
        </dt>
         
        <dd>
          0
        </dd>
      </dl>
    </div>
  </div>
   
  <div
    class="page-profile__section"
  >
    <div
      class="row"
    >
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Yes
        </dt>
         
        <dd>
          0 / 0%
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          No
        </dt>
         
        <dd>
          0 / 0%
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          No with Veto
        </dt>
         
        <dd>
          0 / 0%
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Abstain
        </dt>
         
        <dd>
          0 / 0%
        </dd>
      </dl>
    </div>
     
    <div
      class="row"
    >
      <div
        class="column"
      >
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Description
          </dt>
           
          <dd>
            <text-block-stub
              content="custom text proposal description"
            />
          </dd>
        </dl>
      </div>
    </div>
  </div>
   
  <modal-deposit-stub
    denom="STAKE"
    proposalid="2"
    proposaltitle="VotingPeriod proposal"
  />
   
  <modal-vote-stub
    proposalid="2"
    proposaltitle="VotingPeriod proposal"
  />
</tm-page-stub>
`;

exports[`PageProposal renders votes in HTML when voting is open 1`] = `
<tm-page-stub
  data-title="Proposal"
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub />
     
    <tool-bar-stub />
  </template>
   
  <div
    class="page-profile__header page-profile__section proposal"
  >
    <div
      class="row"
    >
      <h2
        class="proposal-id"
      >
        
          #2
        
      </h2>
       
      <div
        class="page-profile__header__info"
      >
        <div
          class="page-profile__status-and-title"
        >
          <span
            class="page-profile__status green"
          />
           
          <h2
            class="page-profile__title"
          >
            
              VotingPeriod proposal
            
          </h2>
        </div>
         
        <div
          class="page-profile__header__actions"
        >
          <tm-btn-stub
            color="primary"
            id="vote-btn"
            value="Vote"
          />
           
          <!---->
           
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="row"
    >
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Submitted
        </dt>
         
        <dd>
          a few seconds ago
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Proposal Status
        </dt>
         
        <dd>
          
            Voting started in 2 days.
          
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Deposit Count
        </dt>
         
        <dd>
          
            200 STAKE
          
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Vote Count
        </dt>
         
        <dd>
          0.00001
        </dd>
      </dl>
    </div>
  </div>
   
  <div
    class="page-profile__section"
  >
    <div
      class="row"
    >
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Yes
        </dt>
         
        <dd>
          0.000001 / 10%
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          No
        </dt>
         
        <dd>
          0.000002 / 20%
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          No with Veto
        </dt>
         
        <dd>
          0.000003 / 30%
        </dd>
      </dl>
       
      <dl
        class="info_dl colored_dl"
      >
        <dt>
          Abstain
        </dt>
         
        <dd>
          0.000004 / 40%
        </dd>
      </dl>
    </div>
     
    <div
      class="row"
    >
      <div
        class="column"
      >
        <dl
          class="info_dl colored_dl"
        >
          <dt>
            Description
          </dt>
           
          <dd>
            <text-block-stub
              content="custom text proposal description"
            />
          </dd>
        </dl>
      </div>
    </div>
  </div>
   
  <modal-deposit-stub
    denom="STAKE"
    proposalid="2"
    proposaltitle="VotingPeriod proposal"
  />
   
  <modal-vote-stub
    proposalid="2"
    proposaltitle="VotingPeriod proposal"
  />
</tm-page-stub>
`;

exports[`PageProposal shows an error if the proposal couldn't be found 1`] = `
<tm-page-stub
  data-title="Proposal"
  subtitle=""
  title=""
>
  <template>
    <tm-balance-stub />
     
    <tool-bar-stub />
  </template>
   
  <tm-data-error-stub />
</tm-page-stub>
`;
